# ChangeLog for app-pda/libiphone
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -libiphone-0.9.4.ebuild:
  version in main tree

  07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> libiphone-9999.ebuild:
  create ChangeLog, repoman fix
