@@ -1,3 +1,3 @@
-EBUILD libiphone-9999.ebuild 884 RMD160 c5530dd08bec354a4926ca8dac9acaf63bdd7400 SHA1 eb7f81420c5ab26f825412a1cc8ceb46edca9eb7 SHA256 277c3831c9a5523c0c01b1b3ad81690436155d4b6867986625aea96eca026233
-MISC ChangeLog 331 RMD160 974bd10706d07effcb33d6dad28e7b5853a60bdb SHA1 c8199813570c9fad7916c4ab2b8a0c2688850d40 SHA256 830b4bb9f21c717c0ae316173e21034c3ff5f0c08ebf7f84c2de3c1d66385117
+EBUILD libiphone-9999.ebuild 869 RMD160 3ea2cacafd23ec16f9c21d02e39db00c1baba466 SHA1 c6d1046a5f51ad3e492e157a196ded4a72581a4c SHA256 ac8e7afc268bf17d32b096ef1d203966b9d17b6c40dbdd37677f3e993227a514
+MISC ChangeLog 470 RMD160 4346f46e78290007fc540984f4d7874ada2b6f64 SHA1 acb60afbc9a8e1b229a0709299bbf254aa91346e SHA256 1daefa06dea9bd67f6d99ecd727e3fa4a0eb3b7d64a562fcc1753cc1f2b06ce0
 MISC metadata.xml 473 RMD160 b86581194489d56ef41d53fe71ed0fdb3e7ee53f SHA1 35d42523d94db2338b7691d12973a2b658828997 SHA256 0e5578632726184f3e4a1823e7bce50d22ce3b0ec20a9b0c4f8fa754a67929fc
