@@ -2,42 +2,40 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="1"
+EAPI="2"
 
-inherit autotools
-if [[ "${PV}" == 9999* ]]; then
-	inherit git
-	EGIT_REPO_URI="git://github.com/MattColyer/libiphone.git"
-else
-	SRC_URI="http://cloud.github.com/downloads/MattColyer/${PN}/${P}.tar.bz2"
-fi
+inherit python autotools git
 
+EGIT_REPO_URI="git://github.com/MattColyer/libiphone.git"
 DESCRIPTION="Library for access to a iphone and ipod touch without a jailbreak"
 HOMEPAGE="http://matt.colyer.name/projects/iphone-linux/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
-IUSE=""
+KEYWORDS=""
+IUSE="debug python"
 
 RDEPEND="app-pda/libplist
-	app-pda/usbmuxd
-	dev-libs/glib:2
-	dev-libs/libgcrypt
-	net-libs/gnutls
-	sys-fs/fuse
-	virtual/libusb:0"
-DEPEND="dev-util/pkgconfig
-	${RDEPEND}"
+		app-pda/usbmuxd
+		dev-libs/glib:2
+		dev-libs/libgcrypt
+		net-libs/gnutls
+		sys-fs/fuse
+		virtual/libusb:0"
 
-src_unpack() {
-	if [[ "${PV}" == 9999* ]]; then
-		git_src_unpack
-	else
-		unpack ${A}
-	fi
-	cd "${S}"
+DEPEND="dev-util/pkgconfig
+		python? ( dev-lang/swig[python] )
+		${RDEPEND}"
+
+src_prepare() {
 	eautoreconf
+}
+
+src_configure(){
+	econf \
+		--enable-dev-tools \
+		$(use_enable debug debug-code) \
+		$(use_with python swig) || die "econf failed"
 }
 
 src_install() {
