@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru> libiphone-9999.ebuild:
+  add new use flag in app-pda/libiphone/libiphone-9999.ebuild
+
   19 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   -libiphone-0.9.4.ebuild:
   version in main tree
